# salary-prediction-app

./: .gitignore  README.md  main.py  pyproject.toml
fastapi_app/: main.py  model_loader.py  requirements.txt  schemas.py  utils.py
local_pipeline/: llm_analyzer.py  run_pipeline.py  test_different_people.py  test_predictions.py  view_predictions.py
models/: encoding_maps.json  encoding_maps_v3.json  feature_importance.json  feature_importance_v3.json  feature_importance_v4.json  metrics.json  metrics.txt  metrics_v3.json  metrics_v3.txt  metrics_v4.json  model_metrics.json
notebooks/: 01_data_exploration.ipynb
salary_src/: config.py  preprocess.py  train_model.py
scripts/: clear_supabase.py  download_dataset.py  full_validation.py  setup_supabase.py  supabase_test.py  validate_pipeline.py
src/: config.py  data_loader.py
streamlit_dashboard/: dashboard.py  requirements.txt
