[project]
name = "salary-prediction-app"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.3",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.1",
    "supabase>=2.5.3",
    "ollama>=0.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ipykernel>=7.2.0",
    "seaborn>=0.13.2",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "pydantic>=2.12.5",
    "streamlit>=1.56.0",
    "plotly>=6.6.0",
]
